# xync-server

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240101000000_initial_schema.sql  20260105000000_remove_preview_columns.sql  20260105000001_remove_preview_description.sql
src/: config.rs  error.rs  error_tests.rs  lib.rs  main.rs  metrics.rs  telemetry.rs
src/auth/: jwt.rs  jwt_tests.rs  middleware.rs  mod.rs
src/db/: mod.rs
src/handlers/: auth.rs  bookmark.rs  category.rs  health.rs  mod.rs  note.rs  tag.rs
src/models/: bookmark.rs  category.rs  mod.rs  note.rs  tag.rs  tests.rs  user.rs
src/services/: bookmark.rs  category.rs  mod.rs  note.rs  preview.rs  tag.rs  user.rs
tests/: api_tests.rs
